Alteração de como funciona o tema escuro, pequena alteração no roteiro de perguntas, entre outras pequenas correções

--- a/FitlyApp/Artigos/BeneficiosAlimentacaoEquilibrada.html
+++ b/FitlyApp/Artigos/BeneficiosAlimentacaoEquilibrada.html
@@ -1,136 +1,175 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Beneficios alimentação saudavel</title>
-    <link rel="stylesheet" href="CSS/style-beneficios.css"/>
-    <script src="https://kit.fontawesome.com/a1f8cb2104.js" crossorigin="anonymous"></script>
-  </head>
-  <body>
-    
-    <header>
-      <div class="logo">
-        <img src="\FitlyApp\Imagens\logos\logoFitlySemTexto.png" alt="Logo">
-        <a href="/FitlyApp"><h2>Fitly</h2></a>
-      </div>
-      <nav>
-        <ul>
-          <li>
-            <a href="/FitlyApp/">Início</a>
-          </li>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Beneficios alimentação saudavel</title>
+  <link rel="stylesheet" href="../base.css">
+  <link rel="stylesheet" href="CSS/style-beneficios.css" />
+  <script src="https://kit.fontawesome.com/a1f8cb2104.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+
+  <header>
+    <div class="logo">
+      <a href="/FitlyApp">
+        <img src="..\Imagens\logos\logoFitlySemTexto.png" alt="Logo">
+        <h2>Fitly</h2>
+      </a>
+    </div>
+    <nav>
+      <ul>
+        <li>
+          <a href="/FitlyApp/">Início</a>
+        </li>
+        <li>
           <a href="/FitlyApp/Sobre-o-projeto/">Sobre O Projeto</a>
         </li>
         <li>
           <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
         </li>
-        <li>
-        </ul>
-      </nav>
-    </header>
-
+      </ul>
+    </nav>
+  </header>
+  
   <main>
-      <section>
-        <h1>Benefícios da alimentação equilibrada</h1>
-        <p class="meio">
-          Adotar uma alimentação equilibrada é essencial para a promoção da
-          saúde ao longo da vida. Uma dieta rica em nutrientes contribui
-          diretamente para o bem-estar geral, ajudando na prevenção de doenças
-          crônicas e na manutenção do peso ideal.
-        </p>
-        <ul>
-            <li>
-                <img src="../Imagens/img_Artigos/img_beneficios-alimentação-equilibrada/Prato_com_arroz_e_feijão,_frango_grelhado,_batata_frita,_salada_e_ovo_frito_como_adicionais.jpg" alt="#">
-                <div class="texto"><h2>Prato ideal</h2>
-                <p>Um prato saudável deve ser variado e conter carboidratos (arroz, batata), proteínas (frango, feijão) e muitas verduras e legumes. Pequenas quantidades de gorduras boas, como azeite, também são importantes. <br> <a href="https://www.zerocal.com.br/blog/saude-e-bem-estar/alimentacao-equilibrada-qual-a-importancia-beneficios-e-mais " target="_blank"> Leia mais sobre...</a></p></div>
-            </li>
-            <li>
-                <img src="../Imagens/img_Artigos/img_beneficios-alimentação-equilibrada/jonathan-borba-lrQPTQs7nQQ-unsplash 1.png" alt="#">
-                <div class="texto"><h2>Exercícios e Nutrição</h2>
-                <p>Uma alimentação saudável é essencial para quem pratica exercícios. Ela fornece energia, melhora o desempenho e acelera a recuperação muscular, ajudando a prevenir lesões e fortalecer o sistema imunológico. <br> <a href="https://drpauloklein.com.br/blog/a-importancia-da-alimentacao-saudavel-e-atividade-fisica" target="_blank"> Leia mais sobre...</a></p></div>
-            </li>
-        </ul>
-      </section>
-      <section>
-        <h1>Os malefícios de alimentos ultraprocessados</h1>
-        <p class="meio">O consumo excessivo de produtos industrializados com aditivos químicos, corantes e conservantes pode trazer sérios prejuízos à saúde, aumentando o risco de obesidade, doenças cardiovasculares e diabetes tipo 2.</p>
-        <ul>
-          <li>
-              <img src="/FitlyApp/Imagens/img_Artigos/img_beneficios-alimentação-equilibrada/logan-weaver-lgnwvr-qgZRZI-pKgM-unsplash.jpg" alt="#">
-              <div class="texto"><h2>Riscos do Fast Food</h2>
-              <p>Fast food é um exemplo comum de ultraprocessado, cheio de gorduras ruins, sódio e açúcares. O consumo frequente aumenta o risco de obesidade, diabetes e problemas cardíacos, além de possuir poucos nutrientes. <br> <a href="https://longevidadesaudavel.com.br/perigos-do-fast-foods/" target="_blank"> Leia mais sobre...</a></p></div>
-          </li>
-          <li>
-            <img src="/FitlyApp/Imagens/img_Artigos/img_beneficios-alimentação-equilibrada/Group 24.png" alt="#">
-            <div class="texto"><h2>Atenção aos Rótulos</h2>
-            <p>Saber ler os rótulos ajuda a evitar ultraprocessados. Prefira produtos com poucos ingredientes e fique atento a termos como açúcares, gorduras trans, corantes e conservantes. Verifique também o sódio por porção. <br> <a href="https://vencerocancer.org.br/como-ler-o-rotulo-de-um-alimento/" target="_blank"> Leia mais sobre...</a></p></div>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <footer>
-        <div>
-            <div class="logo">
-                <a href="/FitlyApp/">
-                    <img src="/Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
-                    <h2>
-                        Fitly
-                    </h2>
-                </a>
-                <p>
-                    Sua jornada para uma vida mais tranquila <br> começa aqui.<br> Encontre treinos, dicas e muito mais!
-                </p>
-                <ul>
-                    <li>
-                        <a href="https://instagram.com/app.fitly"><span class="fa-brands fa-instagram"><span><a>
-                    </li>
-                    <li>
-                        <a arget="_blank" href="https://tiktok.com/@app.fitly"><span class="fa-brands fa-tiktok"></span></a>
-                    </li>
-                    <li>
-                      <a target="_blank" href="https://x.com/app_fitly"><span class="fa-brands fa-twitter"></span></a>
-                    </li>
-                </ul>
-            </div>
-            <div class="mapSite">
-                <h2>
-                    Indice
-                </h2>
-                <ul>
-                    <li>
-                        <a href="/FitlyApp/">Início</a>
-                    </li>
-                    <li>
-                        <a href="/FitlyApp/Sobre-o-projeto/">
-                            Nosso projeto
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/FitlyApp/Artigos/">Artigos</a>
-                    </li>
-                    <li>
-                        <a href="/FitlyApp/Referencias/">Referências</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="contact">
-                <h2> Contato</h2>
-                <p>
-                    Tem alguma dúvida? Nos contate!
-                </p>
-                <p class="email">
-                    Fitlyapp1@gmail.com
-                </p>
-                <p>
-                    Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto Federal Catarinense
-                </p>
-            </div>
-        </div>
-        <div class="direitos">
+    <section>
+      <h1>Benefícios da alimentação equilibrada</h1>
+      <p class="meio">
+        Adotar uma alimentação equilibrada é essencial para a promoção da
+        saúde ao longo da vida. Uma dieta rica em nutrientes contribui
+        diretamente para o bem-estar geral, ajudando na prevenção de doenças
+        crônicas e na manutenção do peso ideal.
+      </p>
+      <ul>
+        <li>
+          <img
+            src="../Imagens/img_Artigos/img_beneficios-alimentação-equilibrada/Prato_com_arroz_e_feijão,_frango_grelhado,_batata_frita,_salada_e_ovo_frito_como_adicionais.jpg"
+            alt="#">
+          <div class="texto">
+            <h2>Prato ideal</h2>
+            <p>Um prato saudável deve ser variado e conter carboidratos (arroz, batata), proteínas (frango, feijão) e
+              muitas verduras e legumes. Pequenas quantidades de gorduras boas, como azeite, também são importantes.
+              <br> <a
+                href="https://www.zerocal.com.br/blog/saude-e-bem-estar/alimentacao-equilibrada-qual-a-importancia-beneficios-e-mais "
+                target="_blank"> Leia mais sobre...</a></p>
+          </div>
+        </li>
+        <li>
+          <img
+            src="../Imagens/img_Artigos/img_beneficios-alimentação-equilibrada/jonathan-borba-lrQPTQs7nQQ-unsplash 1.png"
+            alt="#">
+          <div class="texto">
+            <h2>Exercícios e Nutrição</h2>
+            <p>Uma alimentação saudável é essencial para quem pratica exercícios. Ela fornece energia, melhora o
+              desempenho e acelera a recuperação muscular, ajudando a prevenir lesões e fortalecer o sistema
+              imunológico. <br> <a
+                href="https://drpauloklein.com.br/blog/a-importancia-da-alimentacao-saudavel-e-atividade-fisica"
+                target="_blank"> Leia mais sobre...</a></p>
+          </div>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h1>Os malefícios de alimentos ultraprocessados</h1>
+      <p class="meio">O consumo excessivo de produtos industrializados com aditivos químicos, corantes e conservantes
+        pode trazer sérios prejuízos à saúde, aumentando o risco de obesidade, doenças cardiovasculares e diabetes tipo
+        2.</p>
+      <ul>
+        <li>
+          <img src="../Imagens/img_Artigos/img_beneficios-alimentação-equilibrada/logan-weaver-lgnwvr-qgZRZI-pKgM-unsplash.jpg" alt="#">
+          <div class="texto">
+            <h2>Riscos do Fast Food</h2>
+            <p>Fast food é um exemplo comum de ultraprocessado, cheio de gorduras ruins, sódio e açúcares. O consumo
+              frequente aumenta o risco de obesidade, diabetes e problemas cardíacos, além de possuir poucos nutrientes.
+              <br> <a href="https://longevidadesaudavel.com.br/perigos-do-fast-foods/" target="_blank"> Leia mais
+                sobre...</a></p>
+          </div>
+        </li>
+        <li>
+          <img src="../Imagens/img_Artigos/img_beneficios-alimentação-equilibrada/Group 24.png" alt="#">
+          <div class="texto">
+            <h2>Atenção aos Rótulos</h2>
+            <p>Saber ler os rótulos ajuda a evitar ultraprocessados. Prefira produtos com poucos ingredientes e fique
+              atento a termos como açúcares, gorduras trans, corantes e conservantes. Verifique também o sódio por
+              porção. <br> <a href="https://vencerocancer.org.br/como-ler-o-rotulo-de-um-alimento/" target="_blank">
+                Leia mais sobre...</a></p>
+          </div>
+        </li>
+      </ul>
+    </section>
+  </main>
+  <footer>
+    <div>
+      <div class="logo">
+        <a href="/FitlyApp/">
+          <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
+          <h2>
+            Fitly
+          </h2>
+        </a>
         <p>
-            &copy; 2025 Fitly. Todos os direitos reservados.
+          Sua jornada para uma vida mais tranquila <br> começa aqui.<br> Encontre treinos, dicas e muito mais!
         </p>
-        </div>
-    </footer>
-  </body>
+        <ul>
+          <li>
+            <a href="https://instagram.com/app.fitly"><span class="fa-brands fa-instagram"><span><a>
+          </li>
+          <li>
+            <a  href="https://tiktok.com/@app.fitly"><span class="fa-brands fa-tiktok"></span></a>
+          </li>
+          <li>
+            <a href="https://x.com/app_fitly"><span class="fa-brands fa-twitter"></span></a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="mapSite">
+        <h2>
+          Indice
+        </h2>
+        <ul>
+          <li>
+            <a href="/FitlyApp/">Início</a>
+          </li>
+          <li>
+            <a href="/FitlyApp/Sobre-o-projeto/">
+              Nosso projeto
+            </a>
+          </li>
+          <li>
+            <a href="/FitlyApp/Artigos/">Artigos</a>
+          </li>
+          <li>
+            <a href="/FitlyApp/Referencias/">Referências</a>
+
+          </li>
+        </ul>
+      </div>
+
+      <div class="contact">
+        <h2> Contato</h2>
+        <p>
+          Tem alguma dúvida? Nos contate!
+        </p>
+        <p class="email">
+          Fitlyapp1@gmail.com
+        </p>
+        <p>
+          Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto Federal Catarinense
+        </p>
+      </div>
+
+    </div>
+    <div class="direitos">
+      <p>
+        &copy; 2025 Fitly. Todos os direitos reservados.
+      </p>
+    </div>
+
+  </footer>
+</body>
+
 </html>
