--- a/FitlyApp/Artigos/OrganizaçãoAlimentar.html
+++ b/FitlyApp/Artigos/OrganizaçãoAlimentar.html
@@ -270,11 +270,11 @@
   let dicaExtra = document.getElementById('dica-extra');
   botaoNoturno.addEventListener("click", function () {
     if (eClaro) {
-      raiz.style.setProperty('--color-background', '#0a0908');
+      raiz.style.setProperty('--color-background', '#22333b');
       raiz.style.setProperty('--color-text', 'white');
       luaImg.style.display = "none";
       solImg.style.display = "block";
-      dicaExtra.style.backgroundColor = "#22333b";
+      dicaExtra.style.backgroundColor = "black";
       eClaro = false;
     } else {
       raiz.style.setProperty('--color-background', '#f7f7f7');
