--- a/FitlyApp/Formulario/index.html
+++ b/FitlyApp/Formulario/index.html
@@ -34,9 +34,11 @@
             <input
               class="texto"
               type="number"
+              min="0"
               placeholder="Sua idade"
               name="idade"
               id="idade"
+              
             />
           </label>
           <h2>Sexo</h2>
