--- a/FitlyApp/Sobre-o-projeto/index.html
+++ b/FitlyApp/Sobre-o-projeto/index.html
@@ -47,51 +47,67 @@
       <h2>Colaboradores do projeto</h2>
       <ul class="unico">
         <li class="unit">
-          <strong>Bruna Ignácio Bernardes: </strong> Formada em nutrição, trabalha atualmente com marketing, ajudou na
-          criação de vários artigos para o projeto.
+          <strong>Bruna Ignácio Bernardes: </strong>
+          <p>
+             Formada em nutrição, trabalha atualmente com marketing, ajudou na
+            criação de vários artigos para o projeto.
+          </p>
           <p>
             <img src="/FitlyApp/Imagens/Img_integrantes/Bruna Ignácio Bernardes.jpg" alt="Bruna" class="imagem">
-          </p>
-        </li>
-      </ul>
+          </p>    
+        </li>   
+      </ul>   
 
       <ul class="colab">
 
             <li>
-              <strong>Igor Marcon Michels:</strong> Líder do projeto,
-              responsável pela entrega das partes de cada um e coordenador das
-              funções de cada um;
+              <strong>Igor Marcon Michels:</strong>
+              <p>
+                 Líder do projeto,
+                responsável pela entrega das partes de cada um e coordenador das
+                funções de cada um;
+              </p>
               <p>
                 <img class="imagem" src="../Imagens/Img_integrantes/AIgor.jpg" alt="Igor Michels"/>
               </p>
             </li>
             <li>
-              <strong>Pedro José Oliveira da Roza:</strong> Responsável pela
-              pesquisa e auxiliar no desenvolvimento das partes estáticas do
-              site.
+              <strong>Pedro José Oliveira da Roza:</strong>
+              <p>
+              Responsável pela
+                pesquisa e auxiliar no desenvolvimento das partes estáticas do
+                site.
+              </p>
               <p>
                 <img class="imagem" src="../Imagens/Img_integrantes/APedro.jpg" alt="Pedro josé"/>
               </p>
             </li>
 
             <li>
-              <strong>Victor Feliciano:</strong> Responsável pela as funcionalidades do
-              site, como login e outros cálculos com dados informados pelo usuário;
+              <strong>Victor Feliciano:</strong>
               <p>
+                 Responsável pela as funcionalidades do
+                site, como login e outros cálculos com dados informados pelo usuário;
+              </p>
+                <p>
                 <img class="imagem" src="../Imagens/Img_integrantes/AFeliciano.jpg" alt="Victor Murilo"/>
               </p>
             </li>
             <li>
-              <strong>Victor Murilo Bernardes:</strong> Secretário do projeto,
-              responsável pela descrição e desenvolvimento das atas de reunião;
+              <strong>Victor Murilo Bernardes:</strong> 
               <p>
+              Secretário do projeto,
+                responsável pela descrição e desenvolvimento das atas de reunião;
+              </p>
+                <p>
                 <img class="imagem" src="../Imagens/Img_integrantes/AVictor Murilo.jpg" alt="Victor Murilo"/>
               </p>
             </li>
 
             <li>
+              <strong>Kaue Teixeira:</strong>
               <p>
-                <strong>Kaue Teixeira:</strong> Responsável por programar as
+               Responsável por programar as
                 partes estáticas do site, além de auxiliar na pesquisa;
               </p>
               <p>
@@ -100,8 +116,8 @@
             </li>
 
             <li>
+              <strong>Matheus Lacerda Maximiano:</strong> Criador da
               <p>
-                <strong>Matheus Lacerda Maximiano:</strong> Criador da
                 organização, responsável por parte da pesquisa;
               </p>
               <p>
